--- a/.htaccess
+++ b/.htaccess
@@ -1,21 +1,21 @@
-<IfModule mod_rewrite.c >
-    <IfModule mod_negotiation.c >
-        Options -MultiViews -Index
-    </IfModule (IfModule)>
+<IfModule mod_rewrite.c>
+    <IfModule mod_negotiation.c>
+        Options -MultiViews -Indexes
+    </IfModule>
 
-    RéécrireEngine Sur
+    RewriteEngine On
 
-    # En-tête d’autorisation de poignée
-    RéécritureCond %{HTTP:Authorization} .
-    RéécritureRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    # Handle Authorization Header
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    # Rediriger slashes de suivi si ce n’est pas un dossier ...
-    RéécritureCond %{REQUEST_FILENAME} !-d
-    RéécritureCond %{REQUEST_URI} (.+)/$
-    RéécritureRule ^ %1 [L,R=301]
+    # Redirect Trailing Slashes If Not A Folder...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteRule ^ %1 [L,R=301]
 
-    # Envoyer des demandes au contrôleur avant...
-    RéécritureCond %{REQUEST_FILENAME} !-d
-    RéécritureCond %{REQUEST_FILENAME} !-f
-    RéécrireRule ^ index.php [L]
-</IfModule (IfModule)>
+    # Send Requests To Front Controller...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ index.php [L]
+</IfModule>
